--- a/backend/views/layout-header.ejs
+++ b/backend/views/layout-header.ejs
@@ -8,6 +8,11 @@
     <!-- Custom styles for this template -->
     <link href="/css/carousel.css" rel="stylesheet">
     <link href="/css/dashboard.css" rel="stylesheet">
+    
+    <link rel="stylesheet" type="text/css" href="/caleandar/css/theme1.css">
+    <link rel="stylesheet" type="text/css" href="/css/hover-min.css">
+    <script type="text/javascript" src="/caleandar/js/caleandar.min.js"></script>
+    
 </head>
 <body>
     
@@ -29,8 +34,8 @@
                         <a class="nav-link disabled" href="#">Disabled</a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <form class="form-inline mt-2 mt-md-0 mb-0 ">
+                    <input class="form-control mr-sm-2 rounded" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
