--- a/backend/views/layout-header.ejs
+++ b/backend/views/layout-header.ejs
@@ -11,8 +11,13 @@
     
     <link rel="stylesheet" type="text/css" href="/caleandar/css/theme1.css">
     <link rel="stylesheet" type="text/css" href="/css/hover-min.css">
+    <link rel="stylesheet" type="text/css" href="/css/toggle-codepen.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.2/rangeslider.css">
+    
+    
     <script src="/js/jquery.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.2/rangeslider.css"></script>
     <script type="text/javascript" src="/caleandar/js/caleandar.min.js"></script>
     
 </head>
