--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -29,7 +29,7 @@
                     <% for(var i=0; i < events.length; i++) { %>
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm " >
-                                <img class="card-img-top" onclick="alert('sefse')" src="/app-data/event-photo/<%= events[i].image %>"  style="height: 225px; width: 100%; display: block;">
+                                <img class="card-img-top" onclick="window.location.href = '/event/<%= events[i].image %>'" src="/app-data/event-photo/<%= events[i].image %>"  style="height: 225px; width: 100%; display: block;">
                                 <div class="card-body">
                                     <h3 class="card-text">
                                             <%= events[i].name %>
