--- a/backend/views/event.ejs
+++ b/backend/views/event.ejs
@@ -92,7 +92,7 @@
                     <a href="#section6">Sponsors</a>
                 </li>
                 <li>
-                    <a href="#section7">Analystics</a>
+                    <a href="#section7">Analytics</a>
                 </li>
                 
             </ul>
@@ -106,37 +106,41 @@
             <div style="background-color:white; padding:20px;">
                 <br/>
                 <div>
-                    <h2>STATUS</h2>
-                    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+                    
+                    <div class="container-fluid">
+                        <h2>STATUS</h2>
+                        <hr>
+
+                        <div class="row">
+                          
+                            <div class="col-md-9">
+                                
+                                <table class="table table-hover mt-5    " >
+                             
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">No of Participants</th>
+                                            <td><%=event.participants.length %></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">No of Volunteers</th>
+                                            <td><%=event.volunteer.length %></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">No of Sponsors</th>
+                                            <td><%=event.sponsors.length %></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="col-md-3">
+                                    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+                                    
+                                </div>
+                        </div> 
+                    </div>
+                    
                     <br/>
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Requirement for the event</th>
-                                <th scope="col">Completed stuff</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
             <div id="section2" class="line"></div>
@@ -259,57 +263,57 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                    <% } %>
+                                                        <% } %>
+                                                        
+                                                        
+                                                    </div>
+                                                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
                                                     
-                                                         
-                                                        </div>
-                                                        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-                                                        
-                                                        <!-- jQuery CDN - Slim version (=without AJAX) -->
-                                                        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                                                        <!-- Popper.JS -->
-                                                        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-                                                        <!-- Bootstrap JS -->
-                                                        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-                                                        <!-- jQuery Custom Scroller CDN -->
-                                                        <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-                                                        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-                                                        <script src="/js/canvas.js" type="text/javascript"></script>
-                                                            <script type="text/javascript">
-                                                                $(document).ready(function () {
-                                                                    $("#sidebar").mCustomScrollbar({
-                                                                        theme: "minimal"
-                                                                    });
-                                                                    
-                                                                    $('#sidebarCollapse').on('click', function () {
-                                                                        $('#sidebar, #content').toggleClass('active');
-                                                                        $('.collapse.in').toggleClass('in');
-                                                                        $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-                                                                    });
-                                                                });
-                                                            </script>
+                                                    <!-- jQuery CDN - Slim version (=without AJAX) -->
+                                                    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+                                                    <!-- Popper.JS -->
+                                                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+                                                    <!-- Bootstrap JS -->
+                                                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+                                                    <!-- jQuery Custom Scroller CDN -->
+                                                    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+                                                    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+                                                    <script src="/js/canvas.js" type="text/javascript"></script>
+                                                    <script type="text/javascript">
+                                                        $(document).ready(function () {
+                                                            $("#sidebar").mCustomScrollbar({
+                                                                theme: "minimal"
+                                                            });
                                                             
-                                                            <script>
-                                                                var coll = document.getElementsByClassName("collapsible");
-                                                                var i;
-                                                                
-                                                                for (i = 0; i < coll.length; i++) {
-                                                                    coll[i].addEventListener("click", function() {
-                                                                        this.classList.toggle("active");
-                                                                        var content = this.nextElementSibling;
-                                                                        if (content.style.maxHeight){
-                                                                            content.style.maxHeight = null;
-                                                                        } else {
-                                                                            content.style.maxHeight = content.scrollHeight + "px";
-                                                                        }
-                                                                    });
+                                                            $('#sidebarCollapse').on('click', function () {
+                                                                $('#sidebar, #content').toggleClass('active');
+                                                                $('.collapse.in').toggleClass('in');
+                                                                $('a[aria-expanded=true]').attr('aria-expanded', 'false');
+                                                            });
+                                                        });
+                                                    </script>
+                                                    
+                                                    <script>
+                                                        var coll = document.getElementsByClassName("collapsible");
+                                                        var i;
+                                                        
+                                                        for (i = 0; i < coll.length; i++) {
+                                                            coll[i].addEventListener("click", function() {
+                                                                this.classList.toggle("active");
+                                                                var content = this.nextElementSibling;
+                                                                if (content.style.maxHeight){
+                                                                    content.style.maxHeight = null;
+                                                                } else {
+                                                                    content.style.maxHeight = content.scrollHeight + "px";
                                                                 }
-                                                            </script>
-                                                            
-                                                        </body>
-                                                        
-                                                        </html>
-                                                        
-                                                        
-                                                        <% include layout-footer %>
-                                                        
+                                                            });
+                                                        }
+                                                    </script>
+                                                    
+                                                </body>
+                                                
+                                                </html>
+                                                
+                                                
+                                                <% include layout-footer %>
+                                                
