--- a/backend/views/event.ejs
+++ b/backend/views/event.ejs
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="/css/eventejs.css">
+    
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     
@@ -109,13 +111,13 @@
                     
                     <div class="container-fluid">
                         <h2>STATUS</h2>
-                        <hr>
+                        <hr class="symbol">
 
                         <div class="row">
                           
-                            <div class="col-md-9">
+                            <div class="col-md-9 p-5">
                                 
-                                <table class="table table-hover mt-5    " >
+                                <table class="table table-hover mt-5  table-striped  " >
                              
                                     <tbody>
                                         <tr>
@@ -151,6 +153,7 @@
                 <div>
                     
                     <h2>Resources</h2>
+                    <hr class="symbol">
                     <button class="collapsible">Rooms</button>
                     <div class="content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -170,7 +173,8 @@
             <div id="section3"></div>
             <div style="background-color:white; padding:20px;">
                 <div>
-                    <h3>Volunteers</h3>
+                    <h2>Volunteers</h2>
+                    <hr class="symbol">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -214,8 +218,8 @@
                 <div id="section5" class="line"></div>
                 <div style="background-color:white; padding:20px;">
                     <div>
-                        <br/> <h3>Permissions</h3>
-                        
+                        <br/> <h2>Permissions</h2>
+                        <hr class="symbol">
                         <% for(var i=0; i < event.permission.length; i++) { %>
                             <div class="card" style="max-width: 20rem;">
                                 <h3 class="card-header"><%= event.permission[i].subject %></h3>
