Checklist and changes in side bar

--- a/backend/views/event.ejs
+++ b/backend/views/event.ejs
@@ -16,7 +16,7 @@
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="/css/eventejs.css">
-    
+
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
@@ -24,8 +24,7 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
-
+    <link rel="stylesheet" href="/css/checklist.css">
     <style>
         .collapsible {
             background-color: #808080;
@@ -65,6 +64,8 @@
             background-color: #f1f1f1;
         }
     </style>
+
+
 </head>
 
 <body>
@@ -118,11 +119,11 @@
                         <hr class="symbol">
 
                         <div class="row">
-                          
+
                             <div class="col-md-9 p-5">
-                                
+
                                 <table class="table table-hover mt-5  table-striped  " >
-                             
+
                                     <tbody>
                                         <tr>
                                             <th scope="row">No of Participants</th>
@@ -149,6 +150,33 @@
                     <br/>
                 </div>
             </div>
+            <div id="section2" class="line"></div>
+
+
+            <div  style="background-color:white; padding:20px;">
+                <br/>
+                <div>
+
+                  <div id="myDIV" class="checkintro">
+                    <h2 style="margin:5px">Check List</h2>
+                    <input type="text" id="CheckInput" placeholder="Title...">
+                    <span onclick="newElement()" class="Btnadd">Add</span>
+                  </div>
+
+
+                    <ul id="myUL" class="My" >
+                    <li>Assign volunteers to events</li>
+                    <li>Shortlist Participants</li>
+                    <li>Create a buzz amongst social media handles</li>
+                    <li>Permissions for using projectors during hackathon</li>
+                    <li>Shortlist list of sponsors</li>
+                    <li>Send Emails to selected participants</li>
+                  </ul>
+
+
+                </div>
+              </div>
+
             <div id="section3" class="line"></div>
 
 
@@ -214,12 +242,12 @@
                         </tbody>
                     </table>        </div>
                 </div>
-                <div  id="section4"  class="line"></div>
+                <div  id="section5"  class="line"></div>
 
                 <div style="background-color:white; padding:20px;">
-                    <h3>Section 4</h3>
+                    <h3>Participants</h3>
                 </div>
-                <div id="section5" class="line"></div>
+                <div id="section6" class="line"></div>
                 <div style="background-color:white; padding:20px;">
                     <div>
                         <br/> <h2>Permissions</h2>
@@ -246,7 +274,7 @@
                                 </div>
                             </div>
                             <br/>
-                            <div id="section6"  class="line"></div>
+                            <div id="section7"  class="line"></div>
                             <div style="background-color:white; padding:20px;">
                                 <br/>
                                 <div>
@@ -318,6 +346,64 @@
                                                         }
                                                     </script>
 
+                                                    <script>
+                                                    // Create a "close" button and append it to each list item
+                                                    var myNodelist = document.getElementsByTagName("LI");
+                                                    var i;
+                                                    for (i = 0; i < myNodelist.length; i++) {
+                                                      var span = document.createElement("SPAN");
+                                                      var txt = document.createTextNode("\u00D7");
+                                                      span.className = "close";
+                                                      span.appendChild(txt);
+                                                      myNodelist[i].appendChild(span);
+                                                    }
+
+                                                    // Click on a close button to hide the current list item
+                                                    var close = document.getElementsByClassName("close");
+                                                    var i;
+                                                    for (i = 0; i < close.length; i++) {
+                                                      close[i].onclick = function() {
+                                                        var div = this.parentElement;
+                                                        div.style.display = "none";
+                                                      }
+                                                    }
+
+                                                    // Add a "checked" symbol when clicking on a list item
+                                                      var list = document.querySelector('ul');
+                                                      list.addEventListener('click', function(ev) {
+                                                        if (ev.target.tagName === 'LI') {
+                                                          ev.target.classList.toggle('checked1');
+                                                        }
+                                                      }, false);
+
+
+                                                    // Create a new list item when clicking on the "Add" button
+                                                    function newElement() {
+                                                      var li = document.createElement("li");
+                                                      var inputValue = document.getElementById("CheckInput").value;
+                                                      var t = document.createTextNode(inputValue);
+                                                      li.appendChild(t);
+                                                      if (inputValue === '') {
+                                                        alert("You must write something!");
+                                                      } else {
+                                                        document.getElementById("myUL").appendChild(li);
+                                                      }
+                                                      document.getElementById("CheckInput").value = "";
+
+                                                      var span = document.createElement("SPAN");
+                                                      var txt = document.createTextNode("\u00D7");
+                                                      span.className = "close";
+                                                      span.appendChild(txt);
+                                                      li.appendChild(span);
+
+                                                      for (i = 0; i < close.length; i++) {
+                                                        close[i].onclick = function() {
+                                                          var div = this.parentElement;
+                                                          div.style.display = "none";
+                                                        }
+                                                      }
+                                                    }
+                                                    </script>
                                                 </body>
 
                                                 </html>
